# OMS-Auditd-Plugin

./: .gitignore  AbstractEventWriter.cpp  AbstractEventWriter.h  AuditEventProcessor.cpp  AuditEventProcessor.h  AuditRules.cpp  AuditRules.h  AuditRulesMonitor.cpp  AuditRulesMonitor.h  AuditStatus.cpp  AuditStatus.h  AuditdCollectionMonitor.cpp  AuditdCollectionMonitor.h  AuomsConfig.cpp  AuomsConfig.h  CGroups.cpp  CGroups.h  CMakeLists.txt  CPULimits.cpp  CPULimits.h  Cache.h  CmdlineRedactor.cpp  CmdlineRedactor.h  CmdlineRedactorTests.cpp  CollectionMonitor.cpp  CollectionMonitor.h  CollectionMonitorBuilder.cpp  CollectionMonitorBuilder.h  Config.cpp  Config.h  ConfigTests.cpp  Defer.h  Event.cpp  Event.h  EventAggregator.cpp  EventAggregator.h  EventAggregatorTests.cpp  EventFilter.cpp  EventFilter.h  EventId.h  (+197 more)
.github/workflows/: codeql.yml  codeql_python.yml
.pipelines/: pipeline.user.linux.all_buildtype.all_tag.BuildBundle.yml  pipeline.user.linux.all_buildtype.all_tag.BuildDockerImage.yml  pipeline.user.linux.all_buildtype.all_tag.BuildPackages.yml  pipeline.user.linux.all_buildtype.docker.yml  pipeline.user.linux.yml  pipeline.user.windows.all_buildtype.all_tag.CloudVaultUpload.yml  pipeline.user.windows.all_buildtype.all_tag.Sign.yml  pipeline.user.windows.yml  pipline.user.windows.official.yml  pipline.user.windows.yml
conf/: auoms.conf  config.xml
conf/outconf.d/: testout.conf
ebpf_demo/: CMakeLists.txt  README.md  event_defs.h  kern.c  user.c
ebpf_perf_output_poc/: CMakeLists.txt  README.md  event_defs.h  kern.c  user.c
ebpf_telemetry/: CMakeLists.txt  README.md  azure-pipelines.yml  ebpf_telemetry.c  ebpf_telemetry.conf  ebpf_telemetry_config.h.in  event_defs.h  syscalls.rules
ebpf_telemetry/ebpf_loader/: CMakeLists.txt  ebpf_telemetry_loader.c  ebpf_telemetry_loader.h
ebpf_telemetry/ebpf_loader/ebpf_kern/: ebpf_kern_common.h  ebpf_kern_helpers.c  ebpf_kern_raw_tp.c  ebpf_kern_tp.c  ebpf_telemetry_kern_raw_tp.c  ebpf_telemetry_kern_raw_tp_noloops.c  ebpf_telemetry_kern_raw_tp_sub4096.c  ebpf_telemetry_kern_tp.c
ebpf_telemetry/get_offsets/: Makefile  README.md  get_offsets.c
installer/: auoms.init  auoms.service
installer/InstallBuilder/: README  installbuilder.py  linuxdpkg.py  linuxrpm.py  scxutil.py
installer/bundle/: auoms-bundle-test.sh  bundle_skel.sh  create_bundle.sh
installer/conf/: audispd_auoms.conf  auoms.conf  auomscollect.conf  example_output.conf  example_redact.conf
installer/datafiles/: base_auoms.data  linux.data  linux_dpkg.data  linux_rpm.data
installer/datafiles-debug/: base_auoms.data  linux_dpkg.data  linux_rpm.data
installer/rules.d/: audit.rules  net_and_file.rules  oms-security-audit.rules
installer/selinux/: auoms.el5.te  auoms.el6.te  auoms.fc  auoms.te
rules/: mstic-research.rules
